// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots EventHandler should render its child 1`] = `
<EventHandler
  forwardedRef={null}
  wrapper="span"
>
  <div>
    this should be seen
  </div>
</EventHandler>
`;

exports[`Snapshots EventHandler should use a custom wrapper 1`] = `
<EventHandler
  forwardedRef={null}
  wrapper="div"
>
  <div>
    this should be seen
  </div>
</EventHandler>
`;
